added form and package cards

--- a/mysite/search_engine/static/search_engine/index.css
+++ b/mysite/search_engine/static/search_engine/index.css
@@ -27,3 +27,11 @@ body {
 .center-vertically {
 	vertical-align: middle;
 }
+
+.vertical-align {
+	margin: auto;
+	position: absolute;
+	top: 0; bottom: 0; left: 0; right: 0;
+	width: 50%;
+	height: 30%;
+}
