--- a/mysite/search_engine/templates/search_engine/index.html
+++ b/mysite/search_engine/templates/search_engine/index.html
@@ -7,7 +7,18 @@
 
 {% block content %}
 
-<div class="container-fluid">
+<div class="container max-height align-middle">
+	<div class="center-block text-center vertical-align">
+		<h1 class="home-welcome">Search Engine for Software Packages</h1>
+
+		<form action="/results/" method="get">
+		  <input type="text" class="form-control" name="searchInput"><br>
+		  <button type="submit" class="btn btn-default">Search</button>
+		</form>
+	</div>	
+</div>
+
+<!-- <div class="container-fluid">
 
 	<h1 class="center-text"> Search Engine for Software Packages </h1>
 		
@@ -25,6 +36,6 @@
 			<input class="btn btn-default search-button" type="button" value="Search">
 		</div>
 	</div>
-</div>
+</div> -->
 
 {% endblock %}
