added cards for packages and filters

--- a/mysite/search_engine/templates/search_engine/header.html
+++ b/mysite/search_engine/templates/search_engine/header.html
@@ -8,6 +8,10 @@
 	<title> Search Engine for Software Packages</title>
 	{% load staticfiles %}
 	<link rel='stylesheet' href="{% static 'bootstrap/css/bootstrap.min.css'%}" type='text/css' />
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+
 	{% block styles %}
 	{% endblock %}
 	<meta name='viewport' content='width=device-width initial-scale=1.0'>
