--- a/mysite/search_engine/static/search_engine/results.css
+++ b/mysite/search_engine/static/search_engine/results.css
@@ -1,3 +1,7 @@
+.package-panel{
+	padding-top: 100px;
+}
+
 .result{line-height: 1.3}
 .result-title {
 	padding-top: 10px;
@@ -13,11 +17,11 @@ a {
 	font-size: 10px;
 }
 .result-description {
-	font-size: 12px;
+	font-size: 120px;
 }
 
 .entire-page{
-	padding-top: 50px;
+	padding-top: 100px;
 	padding-left: 100px;
 	padding-right: 100px;
 }
