--- a/mysite/search_engine/templates/search_engine/header.html
+++ b/mysite/search_engine/templates/search_engine/header.html
@@ -10,6 +10,7 @@
 	<link rel='stylesheet' href="{% static 'bootstrap/css/bootstrap.min.css'%}" type='text/css' />
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
 	{% block styles %}
