--- a/mysite/search_engine/templates/search_engine/index.html
+++ b/mysite/search_engine/templates/search_engine/index.html
@@ -12,7 +12,7 @@
 		<h1 class="home-welcome">Search Engine for Software Packages</h1>
 
 		<form action="/results/" method="get">
-		  <input type="text" class="form-control" name="searchInput"><br>
+		  <input type="text" class="form-control" name="searchInput" placeholder="Search for..."><br>
 		  <button type="submit" class="btn btn-default">Search</button>
 		</form>
 	</div>	
