getting indexer integration

--- a/mysite/search_engine/templates/search_engine/results_page.html
+++ b/mysite/search_engine/templates/search_engine/results_page.html
@@ -26,7 +26,7 @@
 	</div>
 
 
-<button id="test-btn"> Click To Test Whether JS Page Is Compiling - (Alert should show up)</button>
+	<button id="test-btn"> {{indexer}} Click To Test Whether JS Page Is Compiling - (Alert should show up)</button>
 
 	<!-- start package panel -->
 	<div class="row margin-top">
