results showing up but need to filter indexer results to include ones with links

--- a/mysite/search_engine/static/search_engine/results.css
+++ b/mysite/search_engine/static/search_engine/results.css
@@ -48,7 +48,8 @@
 
 
 
-.result{line-height: 1.3}
+.result{line-height: 1.3;
+padding: 10px;}
 .result-title {
 	padding-top: 10px;
 	padding-bottom: 4px;
