--- a/mysite/search_engine/templates/search_engine/_standard_results.html
+++ b/mysite/search_engine/templates/search_engine/_standard_results.html
@@ -1,7 +1,11 @@
 {% for r in results %}
-<div class="result">
-	<div class="result-title "> <a class="result-title" href={{r.url}}> {{r.title}} </a></div>
-	<div class="result-url ">  {{r.url}}  </div>
-	<div class="result-description"> {{r.desc}} </div>
-</div>
+	{% if r.title %}
+
+	<div class="result">
+		<div class="result-title "> <a class="result-title" href={{r.link}}> {{r.title.0}} </a></div>
+		<div class="result-url ">  {{r.link.0}}  </div>
+		<div class="result-description"> {{r.desc}} </div>
+	</div>
+	{% endif %}
+	
 {% endfor %}
