--- a/mysite/search_engine/templates/search_engine/_package_table.html
+++ b/mysite/search_engine/templates/search_engine/_package_table.html
@@ -1,3 +1,7 @@
+{% block styles %}
+{% load staticfiles %}
+<link rel='stylesheet' href="{% static 'search_engine/_package_table.css'%}" type='text/css' />
+{% endblock %}
 
 <table class="table table-responsive package-table">
 	<thead>
