--- a/mysite/search_engine/static/search_engine/index.css
+++ b/mysite/search_engine/static/search_engine/index.css
@@ -11,6 +11,11 @@ body {
 	margin-right: auto;
 }
 
+.image_fit {
+	max-width: 100%;
+/*	max-height: 75%; 
+*/}
+
 .query-bar {
 	width: 550px;
 }
@@ -18,10 +23,6 @@ body {
 .search-button{
 	width: 200px;
 	font-size: 20px;
-}
-
-.row{
-	padding:10px;
 }
 
 .center-vertically {
