--- a/mysite/search_engine/static/search_engine/results.css
+++ b/mysite/search_engine/static/search_engine/results.css
@@ -1,68 +1,22 @@
-.entire-page{
-	padding-top: 100px;
-	padding-left: 100px;
-	padding-right: 100px;
+/*.carousel-height {
+	height: 150px;
+	overflow: visible;
+}*/
+.row {
+	display: flex;
+}
+.search-header{
+	padding-top: 70px;
+	padding-left: 150px;
+	padding-right: 150px;
+	/*background: #eeeeee;*/
+}
+.entire-page {
+	padding-top: 70px;
+	padding-left: 150px;
+	padding-right: 150px;
 	/*width: 80%;*/
 }
-/*
-.full-width {
-	width: 100%;
-}*/
-.filter{
-	padding: 6px;
-}
-.filter-header{
-	font-size: 20px;
-}
-.filter-name{
-	font-size: 16px;
-}
-.margin-top {
-	padding-top: 10px;
-}
-
-
-.package-card {
-	border-style: solid;
-	border-width: 1px;
-	margin-left: 4px;
-	margin-right: 4px;
-	text-align: center;
-	padding: 0px;
-	border-color: gray;
-}
-
-.package-card img {
-	width: 100%;
-}
-
-.package-table {
-	display: none;
-}
-.package-table-header{
-	display: none;
-}
-.package-table-row{
-	display: none;
-}
 
 
 
-.result{line-height: 1.3;
-padding: 10px;}
-.result-title {
-	padding-top: 10px;
-	padding-bottom: 4px;
-	font-size: 20px;
-}
-
-.result-title a {
-	text-decoration: none;
-	color: navy;
-}
-.result-url {
-	font-size: 10px;
-}
-.result-description {
-	font-size: 12px;
-}
