--- a/mysite/search_engine/templates/search_engine/_standard_results.html
+++ b/mysite/search_engine/templates/search_engine/_standard_results.html
@@ -1,8 +1,13 @@
+{% block styles %}
+{% load staticfiles %}
+<link rel='stylesheet' href="{% static 'search_engine/_standard_results.css'%}" type='text/css' />
+{% endblock %}
+
 {% for r in results %}
-	{% if r.title %}
+	{% if r.title_str %}
 
 	<div class="result">
-		<div class="result-title "> <a class="result-title" href="{{r.link}}"}> {{r.title}} </a></div>
+		<div class="result-title "> <a class="result-title" href="{{r.link}}"}> {{r.title_str}} </a></div>
 		<div class="result-url ">  {{r.link}}  </div>
 		<div class="result-description"> {{r.desc}} </div>
 	</div>
