--- a/mysite/search_engine/templates/search_engine/results.html
+++ b/mysite/search_engine/templates/search_engine/results.html
@@ -21,7 +21,8 @@
 {% for package_name in indexer_packages_for_table.name.values %}
  {{package_name}}
 {%endfor%}
-<div class="container-fluid entire-page">
+
+<div class="container-fluid search-header background-berkeley-gold">
 
 	<div class="input-group">
 		<form action="/results/" method="get" class="full-width">
@@ -40,24 +41,30 @@
 		</form>
 	</div>
 
-
-	<!-- <button id="test-btn">  Click To Test Whether JS Page Is Compiling - (Alert should show up)</button> -->
-
-	<div class="row margin-top">
-		<div class="col-sm-9">
-
-			{% include "search_engine/_package_carousel.html" %}
-
-			{% include "search_engine/_package_table.html" %}
-
-			{% include "search_engine/_standard_results.html" %}
+	<div class="row padding-large">
+		<div class="col-sm-9 padding-medium padding-right-none">
+			{% include "search_engine/_package_carousel_2.html" %}
 		</div>
-
-		<div class="col-sm-3">
-			{% include "search_engine/_filter_bar.html" %}
-		</div>
-
 	</div>
 </div>
 
+
+
+	<!-- <button id="test-btn">  Click To Test Whether JS Page Is Compiling - (Alert should show up)</button> -->
+<!-- 	<div class="row padding-large">
+		<div class="col-sm-9 padding-medium padding-right-none">
+		</div>
+
+		<div class="col-sm-3 padding-medium padding-left-none">
+			{% include "search_engine/_filter_bar.html" %}
+		</div>
+	</div>
+	<div class="row padding-top">
+		<div class="col-9">
+			{% include "search_engine/_package_table.html" %}
+			{% include "search_engine/_standard_results.html" %}
+		</div>
+	</div>
+</div>
+ -->
 {% endblock %}
