naive addition of features

--- a/mysite/search_engine/static/search_engine/results.css
+++ b/mysite/search_engine/static/search_engine/results.css
@@ -11,10 +11,10 @@
 	padding-right: 150px;
 	/*background: #eeeeee;*/
 }
-.entire-page {
+.main-body {
 	padding-top: 70px;
 	padding-left: 150px;
-	padding-right: 150px;
+	padding-right: 300px;
 	/*width: 80%;*/
 }
 
