--- a/mysite/search_engine/templates/search_engine/results.html
+++ b/mysite/search_engine/templates/search_engine/results.html
@@ -47,7 +47,12 @@
 		</div>
 	</div>
 </div>
+<div class="container-fluid main-body" >
+	{% include "search_engine/_package_table.html" %}
 
+	{% include "search_engine/_standard_results.html" %}
+
+</div>
 
 
 	<!-- <button id="test-btn">  Click To Test Whether JS Page Is Compiling - (Alert should show up)</button> -->
