--- a/mysite/search_engine/templates/search_engine/results.html
+++ b/mysite/search_engine/templates/search_engine/results.html
@@ -41,8 +41,8 @@
 		</form>
 	</div>
 
-	<div class="row padding-large">
-		<div class="col-sm-9 padding-medium padding-right-none">
+	<div class="row  padding-none">
+		<div class="col-sm-9 padding-medium ">
 			{% include "search_engine/_package_carousel_2.html" %}
 		</div>
 	</div>
