few small changes

--- a/mysite/search_engine/static/search_engine/_package_carousel.css
+++ b/mysite/search_engine/static/search_engine/_package_carousel.css
@@ -44,6 +44,10 @@
 	letter-spacing: 1px;
 	font-weight: 500;
 	font-size: 1.4em;
+	max-width: 145px;
+	max-height: 145px;
+	overflow: hidden;
+	word-wrap: break-word;
 	top: 50%;
 	left: 50%;
     transform: translate(-50%, -50%);
