attempt at multi-select

--- a/mysite/search_engine/templates/search_engine/_filter_bar.html
+++ b/mysite/search_engine/templates/search_engine/_filter_bar.html
@@ -1,32 +1,13 @@
 {% block styles %}
 {% load staticfiles %}
 <link rel='stylesheet' href="{% static 'search_engine/_filter_bar.css'%}" type='text/css' />
-{% endblock %}
+{% endblock %}	
 
-<div class="panel panel-default filter-panel">
- 	<div class="panel-body">
-		<div class="filter-header"> Filter Packages By:</div>
 
-		{% for fil_name, fil_vals in filter_data.items %}
-		<div class="filter">
-			<div class="filter-name"> {{fil_name}} </div>
-			{% for op in fil_vals %}
-				<div class="option option-{{op}}" id"{{fil_name}}-{{op}}">
-					<div class="row">
 
-						<div class="col-sm-9">
-
-							<input class="checkbox-{{op}}" type="checkbox" > {{op.0}} 
-						</div>
-						<div class="col-sm-3">
-							{{op.1}}
-						</div>
-
-					</div>
-				</div>
-
-			{% endfor %}
-		</div>
-		{% endfor %}
-	</div>
-</div>
+TEST: random selectpicker should show up here
+<select class="selectpicker" multiple>
+  <option>Mustard</option>
+  <option>Ketchup</option>
+  <option>Relish</option>
+</select>
