--- a/mysite/search_engine/static/search_engine/results.css
+++ b/mysite/search_engine/static/search_engine/results.css
@@ -4,7 +4,7 @@
 }*/
 .container-fluid{
 	padding-left:70px;
-	padding-right: 300px;
+	padding-right: 70px;
 }
 .carousel-container{
 	padding-left:70px;
@@ -12,8 +12,17 @@
 	background-color: #444444;
 	color: #eeeeee;
 }
+.filter-bar{
+	padding-left: 20px;
+
+}
 .row {
 	display: flex;
+}
+.query-bar-input-group{
+	min-width: 1000px;
+	padding-left: 5px;
+
 }
 .search-header{
 	padding-top: 70px;
