--- a/mysite/~/apps/django/django_projects/Search-Engine-for-Software/mysite/search_engine/static/search_engine/_information_pane.css
+++ b/mysite/~/apps/django/django_projects/Search-Engine-for-Software/mysite/search_engine/static/search_engine/_information_pane.css
@@ -79,7 +79,7 @@
 
 .package-info .long-content{
     font-size: 12px;
-    max-height: 300px;
-    overflow-y: scroll;
+    max-height: 150px;
+    overflow: hidden;
     word-wrap: break-word;
 }
